# django-mail-auth

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  index.html  linter-requirements.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql.yml  release.yml
contributing/: index.html
customizing/: index.html
docs/: conf.py  contributing.md  customizing.md  customizing.rst  index.rst  privacy.md  privacy.rst  settings.md  settings.rst  spelling_wordlist.txt  templates.md  templates.rst
mailauth/: __init__.py  backends.py  forms.py  signing.py  urls.py  views.py
mailauth/contrib/: __init__.py
mailauth/contrib/admin/: __init__.py  admin.py  apps.py  views.py
mailauth/contrib/admin/locale/de/LC_MESSAGES/: django.po
mailauth/contrib/admin/static/mailauth_admin/css/: login.css
mailauth/contrib/admin/templates/mailauth_admin/: login.html
mailauth/contrib/admin/templates/registration/: login_requested.html
mailauth/contrib/user/: __init__.py  admin.py  apps.py  models.py  signals.py
mailauth/contrib/user/locale/de/LC_MESSAGES/: django.po
mailauth/contrib/user/migrations/: 0001_initial.py  0002_emailuser_session_salt.py  0003_ci_unique_index.py  0004_auto_20200812_0722.py  0005_emailuser_email_hash_alter_emailuser_email.py
mailauth/contrib/wagtail/: __init__.py  apps.py  urls.py  views.py
mailauth/contrib/wagtail/templates/wagtailadmin/: login.html
mailauth/templates/registration/: login_email.txt  login_subject.txt
privacy/: index.html
search/: search_index.json
settings/: index.html
templates/: index.html
tests/: conftest.py  test_backends.py  test_forms.py  test_models.py  test_signing.py  test_views.py
tests/contrib/admin/: test_admin.py  test_views.py
tests/contrib/auth/: test_admin.py  test_models.py  test_signals.py
tests/contrib/wagtail/: test_views.py
tests/testapp/: manage.py  settings.py  urls.py  wsgi.py
usage/: index.html
