[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "django-mail-auth"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.rst"
license = { file = "LICENSE" }
keywords = [
  "django",
  "otp",
  "email",
  "authentication",
  "passwordless",
]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Wagtail",
  "Framework :: Wagtail :: 6",
  "Framework :: Wagtail :: 7",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
  "django>=4.2"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-django",
]
lint = [
  "ruff==0.14.0",
  "pyupgrade==3.21.0",
  "django-upgrade==1.29.0",
]
docs = [
  "sphinx",
]
wagtail = [
  "wagtail>=6.3",
]
postgres = [
  "django-citext",
]

[project.urls]
Project-URL = "https://github.com/codingjoe/django-mail-auth"
Changelog = "https://github.com/codingjoe/django-mail-auth/releases"
Source = "https://github.com/codingjoe/django-mail-auth"
Documentation = "https://django-mail-auth.rtfd.io/"
Issue-Tracker = "https://github.com/codingjoe/django-mail-auth/issues"

[tool.flit.module]
name = "mailauth"

[tool.setuptools_scm]
write_to = "mailauth/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --tb=short -rxs"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"

[tool.coverage.run]
source = ["mailauth"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
src = ["mailauth", "tests"]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "PGH", # pygrep-hooks
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

ignore = ["D1"]

[tool.ruff.lint.per-file-ignores]
"*/test*.py" = ["S101", "PLR2004"]
"*/migrations/*.py" = ["E501"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
known-first-party = ["mailauth", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
