[metadata]
name = django-mail-auth
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Django authentication via login urls, no passwords required
long_description = file: README.rst
url = https://github.com/codingjoe/django-mail-auth
license = MIT
license_file = LICENSE
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
keywords = django, otp, password, email

[options]
include_package_data = True
packages = find:
install_requires =
    django>=2.0
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-django
    pytest-cov

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=mailauth --cov-report xml --cov-report term-missing --tb=short
DJANGO_SETTINGS_MODULE = tests.testapp.settings

[tox:tox]
envlist = py{36,37}-dj{22,21,20,master},docs

[testenv]
passenv=CI
deps =
    dj20: https://github.com/django/django/archive/stable/2.0.x.tar.gz#egg=django
    dj21: https://github.com/django/django/archive/stable/2.1.x.tar.gz#egg=django
    dj22: https://github.com/django/django/archive/stable/2.2.x.tar.gz#egg=django
    djmaster: https://github.com/django/django/archive/master.tar.gz#egg=django
commands = python setup.py test

[testenv:docs]
commands = python setup.py build_sphinx -W -b doctest -b html

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[falke8]
max-line-length=88
exclude = venv,.tox,.eggs

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = mailauth, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
