[metadata]
name = django-mail-auth
author = Johannes Maron
author_email = johannes@maron.family
description = Django authentication via login URLs, no passwords required
long_description = file: README.rst
url = https://github.com/codingjoe/django-mail-auth
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
keywords = django, otp, password, email

[options]
include_package_data = True
packages = find:
install_requires =
    django>=2.2
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-django
    pytest-cov

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.extras_require]
wagtail = wagtail>=2.8

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=mailauth --cov-report term-missing --tb=short
DJANGO_SETTINGS_MODULE = tests.testapp.settings

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = mailauth, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
